<package format="2">
  <name>rosserial</name>
  <version>0.7.6</version>
  <description>
    Metapackage for core of rosserial.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="paul.bouchier@gmail.com">Paul Bouchier</maintainer>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <exec_depend>rosserial_msgs</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>rosserial_python</exec_depend>

  <export>
    <metapackage/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
