<package format="2">
  <name>rosserial_arduino</name>
  <version>0.7.6</version>
  <description>
    Libraries and examples for ROSserial usage on Arduino/AVR Platforms.
  </description>
  <author>Michael Ferguson</author>
  <author>Adam Stambler</author>
  <maintainer email="paul.bouchier@gmail.com">Paul Bouchier</maintainer>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial_arduino</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>arduino-core</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosserial_msgs</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>rosidl_generator_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
