<package format="2">
  <name>rosserial_python</name>
  <version>0.7.6</version>
  <description>
    A Python-based implementation of the ROS serial protocol.
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="paul.bouchier@gmail.com">Paul Bouchier</maintainer>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url>http://ros.org/wiki/rosserial_python</url>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosserial_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>python-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
