<package format="2">
  <name>rosserial_server</name>
  <version>0.7.6</version>
  <description>
    The rosserial_server package provides a C++ implementation of the rosserial server side,
    serving as a more performance- and stability-oriented alternative to rosserial_python.
  </description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rosserial_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>rmw_implementation</build_depend>

  <exec_depend>rosserial_msgs</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
